--- a/src/components/Singlercard.astro
+++ b/src/components/Singlercard.astro
@@ -32,6 +32,12 @@ console.log(id);
       font-style: normal;
       text-align: center;
     }
+
+    .albumcovers img {
+      width: 20px;
+      border: border-box;
+      border-bottom: 80px;
+    }
   </style>
 
   <script>
