størrelse på billeder og mobil format

--- a/src/pages/music.astro
+++ b/src/pages/music.astro
@@ -147,6 +147,20 @@ import Spotyfi from "../components/Spotyfi.astro";
       .videoer {
         display: block;
         padding: 30px;
+        width:;
+      }
+
+      .videoer {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+      }
+
+      .videoer {
+        animation: scroll-left 80s linear infinite;
+        display: flex;
+        flex-wrap: nowrap;
+        gap: 20px;
+        align-content: baseline;
       }
     }
   </style>
