--- a/src/components/Singlercard.astro
+++ b/src/components/Singlercard.astro
@@ -68,7 +68,7 @@ console.log(id);
             <div class="felx-col">
               <a href="${single.link_url || "link_url"}">
                 <div class="img">
-                <img src="${singleimage_url}" alt="Album cover"}" />
+                <img class="albumcover" src="${singleimage_url}" alt="Album cover"}" />
                   <h2 class="h2">${single.overskrift || "Titel mangler"}</h2>
                   <p class="aarstal">${single.underoverskrift || "År ukendt"}</p>
                 </div>
