--- a/src/components/Spotyfi.astro
+++ b/src/components/Spotyfi.astro
@@ -13,8 +13,7 @@ const { title } = Astro.props;
       <img class="img" src="/billeder/spotyfi.svg" alt="Spotify" />
     </a>
     <p class="p"><br />EXPLORE ON <br /><br />SPOTIFY<br /></p>
-    <div class="line"></div>
-    <div class="arrow"></div> 
+    <img class="arrow" src="/billeder/Arrow.jpg" alt="">
   </div>
 </div>
 
@@ -24,18 +23,10 @@ const { title } = Astro.props;
   }
 
   .arrow {
-      border-top: 15px solid transparent; /* Øvre trekant-kant */
-      border-bottom: 15px solid transparent; /* Nedre trekant-kant */
-      border-right: 40px solid #333; /* Venstre trekant (danner pilen) */
+   display: right;
     }
 
-    .line {
-      position: absolute;
-      width: 30%; /* Længden på stregen */
-      height: 4px; /* Tykkelse på stregen */
-      
-     border-right: 300px solid #333;
-    }
+  
 
   .spotify {
     display: flex;
@@ -72,8 +63,10 @@ const { title } = Astro.props;
     .button {
       grid: block;
     }
+      
     .arrow {
       display: block;
+
     }
   }
 </style>
