--- a/src/components/Liveevents.astro
+++ b/src/components/Liveevents.astro
@@ -3,15 +3,16 @@
 <div class="liveevents">
   <div class="pdesktop">
     <div>
-      <p class="venstre-tekst">14 nov 2025 YEPHA // Hotel Cecil <a class="billetter">BILLETER</a></p>
-      <p class="venstre-tekst">18 nov 2025 YEPHA // BREMEN<a class="billetter">BILLETER</a></p>
-      <p class="venstre-tekst">2 sep 2025 YEPHA // Royal Arena <a class="billetter">BILLETER</a></p>
-      <p class="venstre-tekst">16 sep 2025 YEPHA // VEGA <a class="billetter">BILLETER</a></p>
-      <p class="venstre-tekst">14 nov 2025 YEPHA // PUMPEHUSET <a class="billetter">BILLETER</a></p>
-      <p class="venstre-tekst">18 nov 2025 YEPHA // Maskinhallen <a class="billetter">BILLETER</a></p>
+      <p class="venstre-tekst">14 nov 2025 YEPHA // Hotel Cecil <a href="https://www.ticketmaster.dk/category/musik-billetter/10001" class="billetter">BILLETTER</a></p>
+      <p class="venstre-tekst">18 nov 2025 YEPHA // BREMEN<a href="https://www.ticketmaster.dk/category/musik-billetter/10001" class="billetter">BILLETTER</a></p>
+      <p class="venstre-tekst">2 sep 2025 YEPHA // Royal Arena <a href="https://www.ticketmaster.dk/category/musik-billetter/10001" class="billetter">BILLETTER</a></p>
+      <p class="venstre-tekst">16 sep 2025 YEPHA // VEGA <a href="https://www.ticketmaster.dk/category/musik-billetter/10001" class="billetter">BILLETTER</a></p>
+      <p class="venstre-tekst">14 nov 2025 YEPHA // PUMPEHUSET <a href="https://www.ticketmaster.dk/category/musik-billetter/10001" class="billetter">BILLETTER</a></p>
+      <p class="venstre-tekst">18 nov 2025 YEPHA // Maskinhallen <a href="https://www.ticketmaster.dk/category/musik-billetter/10001" class="billetter">BILLETTER</a></p>
     </div>
   </div>
 </div>
+
 
 <style>
   .pdesktop,
@@ -26,10 +27,14 @@
     text-indent: 0px;
     border-bottom: 1px solid black;
     padding-right: 20px;
+    white-space: nowrap; 
   }
   .billetter {
     float: right;
     padding-left: 150px;
+     text-decoration: none;
+     color: black;
+
   }
   .h2desktop {
     display: flex;
@@ -50,7 +55,7 @@
       text-indent: 0px;
       border-bottom: 1px solid black;
       padding-right: 20px;
-      font-size: 10px;
+      font-size: 8px;
     }
     .h2desktop {
       display: flex;
