--- a/src/pages/acting.astro
+++ b/src/pages/acting.astro
@@ -208,12 +208,6 @@ import FormComponent from "../components/FormComponent.astro";
     flex-direction: row;
     gap: 20px;
   }
-  /* .img2 {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    padding-left: 120px;
-    margin: 50px;
-  } */
 
   .img2 {
     display: flex; /* Gør containeren til en flexbox */
@@ -223,7 +217,7 @@ import FormComponent from "../components/FormComponent.astro";
     padding: 50px;
   }
   .img2 img {
-    width: 80%; /* Gør billederne mindre (ca. halvdelen af containerens bredde) */
+    width: 450px; /* Gør billederne mindre (ca. halvdelen af containerens bredde) */
     max-width: 100%; /* Sørger for, at billederne ikke overstiger deres naturlige størrelse */
     height: auto;
   }
@@ -320,6 +314,12 @@ import FormComponent from "../components/FormComponent.astro";
       justify-content: center;
       flex-direction: row;
       gap: 20px;
+    }
+
+    .img2 img {
+      width: 80%; /* Gør billederne mindre (ca. halvdelen af containerens bredde) */
+      max-width: 100%; /* Sørger for, at billederne ikke overstiger deres naturlige størrelse */
+      height: auto;
     }
 
     .part3 {
