--- a/src/components/Instagramrulle.astro
+++ b/src/components/Instagramrulle.astro
@@ -12,36 +12,34 @@
     </a>
   </div>
   <div>
-    <a href="https://open.spotify.com/album/5fMgcuHMFaoFk0jbhNzXXv?si=NTGPeSkKRb2u7_kITmY-xw&fbclid=PAZXh0bgNhZW0CMTEAAaaZjs8wTIuiXWH60iIgjAdEndlKA3vy93ttMJWuWXWUt_lEfMBFSPcFmZs_aem_CkdrE-5x9C-FDbFgZ6Z2EQ&nd=1&dlsi=7ae159444818450e" target="_blank">
+    <a href="https://open.spotify.com/artist/5asGLnsKzGu0vUCRFSjibL" target="_blank">
       <img src="/billeder/spotyfi.svg" alt="Spotify" />
     </a>
   </div>
 </div>
 
 <div id="instarulle">
-<div class="gallery">
-  <img class="billede1" src="/billeder/insta.webp" alt="insta" />
-  <img class="billede2" src="/billeder/instablåtbillede.webp" alt="insta" />
-  <img class="billede6" src="/billeder/instasorthvid.webp" alt="insta" />
-  <img class="billede5" src="/billeder/instarødt.webp" alt="insta" />
-  <img class="billede1" src="/billeder/acting6.webp" alt="">
-  <img class="billede1" src="/billeder/storm.webp" alt="">
-  <img class="billede1" src="/billeder/insta.webp" alt="insta" />
+  <div class="gallery">
+    <img class="billede1" src="/billeder/insta.webp" alt="insta" />
+    <img class="billede2" src="/billeder/instablåtbillede.webp" alt="insta" />
+    <img class="billede6" src="/billeder/instasorthvid.webp" alt="insta" />
+    <img class="billede5" src="/billeder/instarødt.webp" alt="insta" />
+    <img class="billede1" src="/billeder/acting6.webp" alt="" />
+    <img class="billede1" src="/billeder/storm.webp" alt="" />
+    <img class="billede1" src="/billeder/insta.webp" alt="insta" />
 
-
-  
-  <div class="tobilleder">
-    <img class="billede3" src="/billeder/instasortbillede.webp" alt="insta" />
-    <img class="billede4" src="/billeder/instasorthviderdusød.webp" alt="insta" />
+    <div class="tobilleder">
+      <img class="billede3" src="/billeder/instasortbillede.webp" alt="insta" />
+      <img class="billede4" src="/billeder/instasorthviderdusød.webp" alt="insta" />
+    </div>
   </div>
-</div>
 </div>
 
 <style>
   .someikoner {
     display: flex;
-   justify-content: center;
-   gap: 70px;   
+    justify-content: center;
+    gap: 70px;
   }
 
   .h2desktop {
@@ -53,21 +51,20 @@
   .gallery {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(260px, 1fr)); /* Tilpasser kolonnerne */
-    gap: 20px; 
+    gap: 20px;
     margin-top: 100px;
     margin-bottom: 100px;
   }
 
   .gallery img {
-  flex-shrink: 0; /* Forhindrer billeder i at krympe */
-  width: 20%;
-  height: 100%;
+    flex-shrink: 0; /* Forhindrer billeder i at krympe */
+    width: 20%;
+    height: 100%;
   }
 
   .billede1 {
     width: 100px;
-      border-radius: 2%;
-
+    border-radius: 2%;
   }
   .billede2 {
     width: 100px;
@@ -75,8 +72,8 @@
   }
 
   .billede4 {
-   margin-bottom: 100px;
-   margin-left: ;
+    margin-bottom: 100px;
+    margin-left:;
   }
   .billede5 {
     width: 1000px;
@@ -88,27 +85,25 @@
     margin-bottom: 100px;
   }
   .tobilleder {
-     width: 500px;
+    width: 500px;
   }
 
-#instarulle {
-  overflow: hidden;
-}
+  #instarulle {
+    overflow: hidden;
+  }
 
   .gallery {
-animation: scroll-left 60s linear infinite;
-display: flex;
-flex-wrap: nowrap;
+    animation: scroll-left 60s linear infinite;
+    display: flex;
+    flex-wrap: nowrap;
   }
 
-
-@keyframes scroll-left {
-  from {
-    transform: translateX(0%); /* Starter uden for skærmen til højre */
+  @keyframes scroll-left {
+    from {
+      transform: translateX(0%); /* Starter uden for skærmen til højre */
+    }
+    to {
+      transform: translateX(-50%); /* Flytter hele galleriet ud til venstre */
+    }
   }
-  to {
-    transform: translateX(-50%); /* Flytter hele galleriet ud til venstre */
-  }
-}
 </style>
-
