--- a/src/components/Nyhedsbrev.astro
+++ b/src/components/Nyhedsbrev.astro
@@ -38,12 +38,14 @@ closeButton.addEventListener("click", () => {
       width: 400px;
   height: 400px;
   position: fixed;
+  background-color:rgba(0, 0, 0, 0.84);
+
   
   }
 
 
   .nyhedsknap {
-  background-color: black;
+  background-color:grey;
   }
 
 
@@ -56,7 +58,7 @@ closeButton.addEventListener("click", () => {
 h2 {
   text-align: center;
   font-size: 40px;
-  color: black;
+  color: white;
   margin-bottom: 20px;
   font-family: "Inter", serif;
   font-style: normal;
@@ -64,7 +66,7 @@ h2 {
 
 p {
   text-align: center;
-  color: black;
+   color: white;
   font-family: "Lato", sans-serif;
   font-style: normal;
 }
