--- a/src/components/FormComponent.astro
+++ b/src/components/FormComponent.astro
@@ -115,7 +115,9 @@ import Button from "../components/Button.astro";
       </div>
       
  <div class="form_botton">
-            <Button />
+            <a href="/#formis">
+        <button>SEND</button>
+      </a>
  </div>
   
     </form>
