--- a/src/pages/music.astro
+++ b/src/pages/music.astro
@@ -9,6 +9,7 @@ import Singlercard from "../components/Singlercard.astro";
 import Spotyfi from "../components/Spotyfi.astro";
 ---
 
+<div></div>
 <Layout>
   <body>
     <Header title="MUSIC" />
@@ -51,7 +52,7 @@ import Spotyfi from "../components/Spotyfi.astro";
 
       <h1 class="h2singler">SINGLER</h1>
       <Singlercard />
-
+      <div class="container"></div>
       <h1 class="h2desktop">NY MUSIK UDE SNART // NY MUSIK UDE SNART // NY MUSIK UDE SNART // NY MUSIK UDE SNART // NY MUSIK UDE SNART // NY MUSIK UDE SNART</h1>
     </main>
 
