--- a/src/components/Spotyfi.astro
+++ b/src/components/Spotyfi.astro
@@ -20,10 +20,14 @@ const { title } = Astro.props;
 <style>
   .img {
     width: 100px;
+    margin-left: 30px;
+    padding-left: 70px;
   }
 
   .arrow {
    display: right;
+   margin-right: 0;
+  right: 0;
     }
 
   
@@ -32,6 +36,7 @@ const { title } = Astro.props;
     display: flex;
     align-items: center;
     gap: 20px;
+    white-space: nowrap; 
   }
 
   .container {
@@ -51,8 +56,14 @@ const { title } = Astro.props;
 
   @media (max-width: 1024px) {
     .img,
+
     img {
       width: 60px;
+  
+    }
+    .spotify {
+      white-space: nowrap; 
+      padding: 0;
     }
 
     .p {
@@ -62,6 +73,9 @@ const { title } = Astro.props;
 
     .button {
       grid: block;
+      margin-left: 20px;
+      min-width:5%;
+      white-space: nowrap; 
     }
       
     .arrow {
