padding mistake fixed

--- a/src/components/FormComponent.astro
+++ b/src/components/FormComponent.astro
@@ -14,7 +14,7 @@ import Button from "../components/Button.astro";
   body {
     font-family: Arial, sans-serif;
     margin: 0;
-    padding: 20px;
+    /* padding: 20px; */
   }
 
   .special-component {
