--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -108,7 +108,7 @@ const { title } = Astro.props;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 10px 20px;
+      /* padding: 10px 20px; */
       font-family: inter;
     }
 
