--- a/src/components/Spotyfi.astro
+++ b/src/components/Spotyfi.astro
@@ -21,7 +21,8 @@ const { title } = Astro.props;
   .img {
     width: 100px;
     margin-left: 30px;
-    padding-left: 70px;
+    padding-left: 50px;
+   
   }
 
   .arrow {
@@ -36,7 +37,6 @@ const { title } = Astro.props;
     display: flex;
     align-items: center;
     gap: 20px;
-    white-space: nowrap; 
   }
 
   .container {
@@ -59,6 +59,9 @@ const { title } = Astro.props;
 
     img {
       width: 60px;
+      padding: 50px;
+       padding:1px;
+      
   
     }
     .spotify {
