--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -30,7 +30,8 @@
     display: flex;
     display: inline-block;
     border-bottom: 1px solid black;
-    padding-left: 350px;
+    /* padding-left: 350px; */
+    justify-content: center;
   }
 
   .container {
@@ -82,6 +83,7 @@
       text-align: center;
       /* margin: 30px; */
       padding: 0px;
+      margin-left: 40px;
     }
   }
 </style>
