--- a/src/components/Spotyfi.astro
+++ b/src/components/Spotyfi.astro
@@ -37,6 +37,7 @@ const { title } = Astro.props;
     display: flex;
     align-items: center;
     gap: 20px;
+    white-space: nowrap; 
   }
 
   .container {
