knap paa nyhedsbrevet

--- a/src/components/Nyhedsbrev.astro
+++ b/src/components/Nyhedsbrev.astro
@@ -45,7 +45,10 @@ closeButton.addEventListener("click", () => {
 
 
   .nyhedsknap {
-  background-color:grey;
+  height:10%;
+  width:10%;
+  color:black;
+  background-color:white;
   }
 
 
