--- a/src/components/Singlercard.astro
+++ b/src/components/Singlercard.astro
@@ -10,9 +10,15 @@ const singler = await fetch("https://gmrqdsphowntllgdewkq.supabase.co/rest/v1/ye
 {
   singler.map((single) => {
     return (
-      <div>
-        {single.name} {single.overskrift}
-        {single.image_url}
+      <div class="flex-col">
+        <a href="{single.link_url}">
+          <div class="img">
+            <img src="{billeder/single.image_url.webp}" alt="" />
+            <h1>{single.name} </h1>
+            <h2>{single.overskrift}</h2>
+            <p>{single.underoverskrift}</p>
+          </div>
+        </a>
       </div>
     );
   })
