footer links done

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -29,8 +29,8 @@
 
     <!-- Menu (teksten) -->
     <nav class="menu">
-      <a href="/nyhedsbrev">NYHEDSBREV</a>
-      <a href="/about">ABOUT</a>
+      <a href="/">NYHEDSBREV</a>
+      <a href="/#aboutlink">ABOUT</a>
     </nav>
   </div>
 </footer>
