--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,3 +1,7 @@
+<div id="aboutlink" >
+
+
+
 <div class="about">
   <div>
     <h1 class="streg1">ABOUT</h1>
@@ -86,3 +90,5 @@
     }
   }
 </style>
+
+</div>
