--- a/src/pages/music.astro
+++ b/src/pages/music.astro
@@ -84,6 +84,7 @@ import Spotyfi from "../components/Spotyfi.astro";
       font-size: 20px;
       text-align: right;
       text-decoration: underline;
+      padding:20px;
     }
 
     .videoer {
@@ -148,7 +149,7 @@ import Spotyfi from "../components/Spotyfi.astro";
       .videoer {
         display: block;
         padding: 30px;
-        width:;
+         overflow: hidden;
       }
 
       .videoer {
