--- a/src/pages/music.astro
+++ b/src/pages/music.astro
@@ -53,7 +53,6 @@ import Spotyfi from "../components/Spotyfi.astro";
       <Singlercard />
 
       <h1 class="h2desktop">NY MUSIK UDE SNART // NY MUSIK UDE SNART // NY MUSIK UDE SNART // NY MUSIK UDE SNART // NY MUSIK UDE SNART // NY MUSIK UDE SNART</h1>
-     
     </main>
 
     <Footer />
@@ -74,7 +73,7 @@ import Spotyfi from "../components/Spotyfi.astro";
       font-size: 50px;
       color: #a52913;
       animation: scroll-left 60s linear infinite;
-     white-space: nowrap;
+      white-space: nowrap;
       flex-wrap: nowrap;
       display: inline-block;
     }
@@ -97,6 +96,10 @@ import Spotyfi from "../components/Spotyfi.astro";
       flex-wrap: nowrap;
       gap: 20px;
       align-content: baseline;
+    }
+
+    .videoer {
+      overflow: hidden;
     }
 
     .videomusik1 {
