--- a/src/components/Singlercard.astro
+++ b/src/components/Singlercard.astro
@@ -14,7 +14,7 @@ const singler = await fetch("https://gmrqdsphowntllgdewkq.supabase.co/rest/v1/ye
         <div class="flex-col">
           <a href="{single.link_url}">
             <div class="img">
-              {/* <img src="{billeder/single.image_url.webp}" alt="billede" /> */}
+              <img src="{billeder/single.image_url.webp}" alt="billede" />
               <h2>{single.overskrift}</h2>
               <p>{single.underoverskrift}</p>
             </div>
