--- a/src/components/Singlercard.astro
+++ b/src/components/Singlercard.astro
@@ -1,29 +1,35 @@
 ---
+//@ts-nocheck
+import Layout from "../layouts/Layout.astro";
+
 const singler = await fetch("https://gmrqdsphowntllgdewkq.supabase.co/rest/v1/yepha_singles", {
   method: "GET",
   headers: {
     apikey: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImdtcnFkc3Bob3dudGxsZ2Rld2txIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzM3Mzc0NTksImV4cCI6MjA0OTMxMzQ1OX0.HHGha3yx6RNf9AkkQsBICs0b4qpwkOQ2cSO0BOAGxQ8",
   },
 }).then((res) => res.json());
+console.log(singler);
 ---
 
-{
-  singler.map((single) => {
-    return (
-      <div class="albumcovers">
-        <div class="flex-col">
-          <a href="{single.link_url}">
-            <div class="img">
-              <img src="{single.image_url.webp}" alt="billede" />
-              <h2>{single.overskrift}</h2>
-              <p>{single.underoverskrift}</p>
-            </div>
-          </a>
+<Layout>
+  {
+    singler.map((single) => {
+      return (
+        <div class="albumcovers">
+          <div class="flex-col">
+            <a href="{single.link_url}">
+              <div class="img">
+                <img src={`/billeder/${single.image_url}`} alt="billede" />
+                <h2>{single.overskrift}</h2>
+                <p>{single.underoverskrift}</p>
+              </div>
+            </a>
+          </div>
         </div>
-      </div>
-    );
-  })
-}
+      );
+    })
+  }
+</Layout>
 
 <style>
   img {
