--- a/src/components/Singlercard.astro
+++ b/src/components/Singlercard.astro
@@ -55,14 +55,14 @@ console.log(id);
 
         // Byg HTML dynamisk for hver single
         singler.forEach((single) => {
-          const singleimage_url = `billeder/${single.image_url}`;
+          const singleimage_url = `/billeder/${single.image_url}`;
 
           // HTML skabelon for et single album
           const productHTML = `
             <div class="felx-col">
               <a href ="${single.link_url || "link_url"}" style="text-decoration: none;">
                 <div class="img">
-                <img class="albumcover" src="${singleimage_url}" alt="Album cover"}" />
+                <img class="albumcover" src={singleimage_url} alt="Album cover"}" />
                   <h2 class="h2">${single.overskrift || "Titel mangler"}</h2>
                   <p class="aarstal">${single.underoverskrift || "År ukendt"}</p>
                 </div>
