--- a/src/components/Singlercard.astro
+++ b/src/components/Singlercard.astro
@@ -35,7 +35,7 @@ console.log(singler);
   img {
     width: 200px;
   }
-  .albumcovers {
+  .flex-col {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 20px;
