--- a/src/components/Singlercard.astro
+++ b/src/components/Singlercard.astro
@@ -35,9 +35,9 @@ console.log(singler);
   img {
     width: 200px;
   }
-  .flex-col {
+  .albumcovers {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     gap: 20px;
     padding: 30px;
     color: black;
