--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,11 +1,11 @@
 ---
 
 ---
- 
+
 <footer>
   <div class="container1">
     <a href="/">
-      <img src="/billeder/sortlogo.svg" alt="" />
+      <img src="/billeder/sortlogo.svg" alt="logo" />
     </a>
   </div>
 
@@ -66,8 +66,8 @@
 
     .menu {
       display: flex;
-       font-family: "Lato", sans-serif;
-    font-style: normal;
+      font-family: "Lato", sans-serif;
+      font-style: normal;
       gap: 15px; /* Plads mellem links */
       justify-content: center;
       flex-wrap: nowrap; /* Ingen linjebrud */
@@ -131,8 +131,8 @@
     }
 
     .menu {
-       font-family: "Lato", sans-serif;
-    font-style: normal;
+      font-family: "Lato", sans-serif;
+      font-style: normal;
       display: flex;
       gap: 100px;
       padding-right: 35px;
