--- a/src/components/Forsidevideo.astro
+++ b/src/components/Forsidevideo.astro
@@ -1,5 +1,4 @@
-<video autoplay muted loop src="http://albelynglev.dk/kea/eksamen/JeppeWahlstrom/jeppeherosekvens.mp4"></video>
-
+<video autoplay muted loop src="/billeder/jeppeherosekvens.mp4"></video>
 <style>
   video {
     width: 100%;
