--- a/src/components/Forsidevideo.astro
+++ b/src/components/Forsidevideo.astro
@@ -1,4 +1,4 @@
-<video autoplay muted loop src="/billeder/jeppeherosekvens.mp4"></video>
+<video autoplay muted loop src="https://sustaincph.com/eksamen_sem2/jeppeherosekvens.mp4"></video>
 
 <style>
   video {
