--- a/src/components/Liveevents.astro
+++ b/src/components/Liveevents.astro
@@ -3,12 +3,12 @@
 <div class="liveevents">
   <div class="pdesktop">
     <div>
-      <p class="venstre-tekst">14 nov 2025 YEPHA // Hotel Cecil <a href="https://www.ticketmaster.dk/category/musik-billetter/10001" class="billetter">BILLETTER</a></p>
-      <p class="venstre-tekst">18 nov 2025 YEPHA // BREMEN<a href="https://www.ticketmaster.dk/category/musik-billetter/10001" class="billetter">BILLETTER</a></p>
-      <p class="venstre-tekst">2 sep 2025 YEPHA // Royal Arena <a href="https://www.ticketmaster.dk/category/musik-billetter/10001" class="billetter">BILLETTER</a></p>
-      <p class="venstre-tekst">16 sep 2025 YEPHA // VEGA <a href="https://www.ticketmaster.dk/category/musik-billetter/10001" class="billetter">BILLETTER</a></p>
-      <p class="venstre-tekst">14 nov 2025 YEPHA // PUMPEHUSET <a href="https://www.ticketmaster.dk/category/musik-billetter/10001" class="billetter">BILLETTER</a></p>
-      <p class="venstre-tekst">18 nov 2025 YEPHA // Maskinhallen <a href="https://www.ticketmaster.dk/category/musik-billetter/10001" class="billetter">BILLETTER</a></p>
+      <p class="venstre-tekst">01 mar 2025 YEPHA // HORSENS NY TEATER <a href="https://www.ticketmaster.dk/category/musik-billetter/10001" class="billetter">BILLETTER</a></p>
+      <p class="venstre-tekst">07 mar 2025 YEPHA // AMAGER BIO<a href="https://www.ticketmaster.dk/category/musik-billetter/10001" class="billetter">BILLETTER</a></p>
+      <p class="venstre-tekst">12 mar 2025 YEPHA // ROSKILDE HANDI-FESTIVAL<a href="https://www.ticketmaster.dk/category/musik-billetter/10001" class="billetter">BILLETTER</a></p>
+      <p class="venstre-tekst">14 mar 2025 YEPHA // PORTALEN <a href="https://www.ticketmaster.dk/category/musik-billetter/10001" class="billetter">BILLETTER</a></p>
+      <p class="venstre-tekst">15 mar 2025 YEPHA // VENDELBOHUS <a href="https://www.ticketmaster.dk/category/musik-billetter/10001" class="billetter">BILLETTER</a></p>
+      <p class="venstre-tekst">21 mar 2025 YEPHA // TOBAKSGAARDEN <a href="https://www.ticketmaster.dk/category/musik-billetter/10001" class="billetter">BILLETTER</a></p>
     </div>
   </div>
 </div>
